# Concurrentes1

./: .gitignore  CMakeLists.txt  README.md  client  exchange.csv  logger_server  microservice  portal  tests  weather.csv
Client/: Client.cpp  Client.h  ClientApp.cpp  ClientController.cpp  ClientController.h
Commons/: DataRecordManager.h  Message.h  Messages.h
Exceptions/: FileExistsException.cpp  FileExistsException.h  MKNODException.cpp  MKNODException.h
IPC/Fifo/: Fifo.cpp  Fifo.h  FifoReader.cpp  FifoReader.h  FifoWriter.cpp  FifoWriter.h
IPC/Signal/: SIGINTShutdownHandler.h  SignalHandler.cpp  SignalHandler.h
Logger/: Logger.cpp  Logger.h  LoggerClient.cpp  LoggerClient.h  LoggerServer.cpp  LoggerServer.h  LoggerServerApp.cpp
Microservices/: CRUDMicroserviceController.h  MicroserviceApp.cpp  MicroserviceController.cpp  MicroserviceController.h
Microservices/Weather/: WeatherMicroserviceController.cpp  WeatherMicroserviceController.h
Portal/: MSQueryController.cpp  MSQueryController.h  Portal.cpp  Portal.h  PortalApp.cpp  PortalController.cpp  PortalController.h
Test/: catch.hpp
Test/FifoTest/: FifoTest.cpp
Weather/: City.h  WeatherMicroservice.cpp  WeatherMicroservice.h
clases/: Makefile  main2.cpp
logger/: Logger.cpp  Logger.h
primer-proyecto/: City.h  Client.cpp  Client.h  ClientApp.cpp  Makefile  WeatherMicroserviceController.cpp  WeatherMicroserviceController.h  client  portal  weather
primer-proyecto/Client/: Client.h  ClientApp.cpp
primer-proyecto/Fifo/: FifoEscritura.cpp
primer-proyecto/Portal/: Portal.cpp  Portal.h  PortalApp.cpp
primer-proyecto/Weather/: City.cpp  WeatherMicroservice.cpp  WeatherMicroservice.h  WeatherMicroserviceApp.cpp
test/FifoTest/: FifoTest.cpp
